Corrigindo path de assets

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,12 +4,12 @@
         <!--Luis Delgado-->
         <div class="row">
             <div id="profile" class="col-sm-6 text-center">
-                <img src="assets/images//luisDelgado.jpg"><br><br>
+                <img src="assets/images/luisDelgado.jpg"><br><br>
                 <h1>Luís Delgado</h1>
                 <p><b>Graduado em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</p>
                 <p><b>Pós-graduando em Design de Interação<br>para Artefatos Digitais</b><br>(CESAR School)</p>
                 <a href="http://lattes.cnpq.br/2825730035004500">Lattes</a><br>
-                <a href="assets/images/assets/files/curriculo.pdf" target="_blank">CV</a><br>
+                <a href="assets/files/curriculo.pdf" target="_blank">CV</a><br>
                 <a href="mailto:luishdelgados10@gmail.com">luishdelgados10@gmail.com</a>
             </div>
             <div class="col-sm-6">
@@ -28,7 +28,7 @@
         <div id="personality" class="container">
             <div class="row">
                 <div class="col text-center">
-                    <img src="assets/images//personality.svg"><br>
+                    <img src="assets/images/personality.svg"><br>
                     <br><a href="https://www.16personalities.com/br/personalidade-esfj">Personalidade: Cônsul</a><br>
                     <a href="https://www.16personalities.com/articles/roles-sentinels">Papel: Sentinela</a><br>
                     <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Líder com Pessoas</a>
