Adicionando acesso ao TG pelo título da graduação

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,8 +6,8 @@
             <div id="profile" class="col-sm-6 text-center">
                 <img src="assets/images/luisDelgado.jpg"><br><br>
                 <h1>Luís Delgado</h1>
-                <p><b>Graduado em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</p>
                 <p><b>Pós-graduando em Design de Interação<br>para Artefatos Digitais</b><br>(CESAR School)</p>
+                <a href="https://cin.ufpe.br/~tg/2018-2/"><b>Graduado em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</a><br>
                 <a href="http://lattes.cnpq.br/2825730035004500">Lattes</a><br>
                 <a href="assets/files/curriculo.pdf" target="_blank">CV</a><br>
                 <a href="mailto:luishdelgados10@gmail.com">luishdelgados10@gmail.com</a>
