Atualizando Principais Habilidades

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -127,16 +127,16 @@
         <div id="skills" class="container">
             <div class="row large-skills maxFont">
                 <div class="col-sm-6 text-center">
-                    <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>Escrita Criativa<br>HTML</p>
+                    <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>JavaScript<br>HTML</p>
                 </div>
                 <div class="col-sm-6 text-center">
-                    <p>Capacidade de Organização<br>Eclipse<br>Scrum<br>JavaScript<br>Spring Framework</p>
+                    <p>Capacidade de Organização<br>Escrita Criativa<br>GitHub<br>Scrum<br>Eclipse<br>
                 </div>
             </div>
             <div class="row mobile-skills maxFont">
                 <div class="col-sm-6 text-center">
-                    <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>Escrita Criativa<br>HTML<br>
-                        Capacidade de Organização<br>Eclipse<br>Scrum<br>JavaScript<br>Spring Framework</p>
+                    <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>JavaScript<br>HTML
+                        <br>Capacidade de Organização<br>Escrita Criativa<br>GitHub<br>Scrum<br>Eclipse</p>
                 </div>
             </div>
         </div>
