--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,6 +29,7 @@ a:hover {
 #personality-title h1 {
     text-align: center;
     letter-spacing: -2.0px;
+    padding-top: 3%;
 }
 
 #personality {
