Melhorando margens de Redes em Resumo para smartphones

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,7 +21,7 @@
             
                 <!--Contato-->
                 <div class="row">
-                        <div id="media" class="col-sm-12 text-center">
+                        <div id="media" class="col-xl-12 text-center">
                             <br><a href="https://www.facebook.com/luis.delgado.5209000"><img src="assets/images//imgresFace.png"></a>
                             <a href="https://www.instagram.com/luisdelgado7/"><img src="assets/images//instagram.png"></a>
                             <a href="https://www.linkedin.com/in/luís-henrique-delgado-santos-29ab68a7"><img src="assets/images//imgresIn.png"></a>
