--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -30,8 +30,8 @@ a:hover {
     border-radius: 20%;
     width: 50px;
     height: 50px;
-    // margin-left: 1px;
-    // margin-right: 1px;
+    margin-left: 1px;
+    margin-right: 1px;
 }
 
 .background-image {
