Adicionando linha dividindo primeiras seções

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -38,6 +38,10 @@ a:hover {
     background-color: white;
 }
 
+hr {
+    background-color: white;
+}
+
 /* Habilidades */
 #skills {
     padding: 1%;
