Começando novo visual para Trabalhos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -63,20 +63,20 @@
             <h1>Últimos Trabalhos</h1>
         </div>
         <div class="container">
-            <div id="works" class="row" align="center">
-                <div class="col-sm-6 miniimg text-center">
-                <a href="https://biciflow.com"><img class="img-fluid img-thumbnail miniimg" src="assets/images//biciflow.png" alt="Biciflow"></a>
+            <div id="works" class="row">
+                <div class="offset-xl-1 col-xl-4">
+                <a href="https://biciflow.com"><img class="img-size" src="assets/images//biciflow.png" alt="Biciflow"></a>
                 </div>
-                <div class="col-sm-6 miniimg text-center">
-                <a href="https://navegue.app"><img class="img-fluid img-thumbnail miniimg" src="assets/images//navegue.png" alt="Navegue"></a>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                <a href="https://navegue.app"><img class="img-size" src="assets/images//navegue.png" alt="Navegue"></a>
                 </div>
             </div>
             <div id="works" class="row">
-                <div class="col-sm-6 miniimg text-center">
-                <a href="https://mapeamento40.mctic.gov.br/"><img class="img-fluid img-thumbnail miniimg" src="assets/images//mapa40.png" alt="Mapa40"></a>
+                <div class="offset-xl-1 col-xl-4">
+                <a href="https://mapeamento40.mctic.gov.br/"><img class="img-size" src="assets/images//mapa40.png" alt="Mapa40"></a>
                 </div>
-                <div class="col-sm-6 miniimg text-center">
-                <a href="https://www.instagram.com/p/BylWlLNHygv/?utm_source=ig_web_copy_link"><img class="img-fluid img-thumbnail miniimg" src="assets/images//chopeira40.jpg" alt="Chopeira 4.0"></a>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                <a href="https://www.instagram.com/p/BylWlLNHygv/?utm_source=ig_web_copy_link"><img class="img-size" src="assets/images//chopeira40.jpg" alt="Chopeira 4.0"></a>
                 </div>
             </div>
   
