--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -71,6 +71,19 @@ hr {
     font-size: 120%;
 }
 
+// Trabalhos
+#works {
+    padding-top: 3%;
+}
+
+.img-size {
+    border-radius: 5px;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+    width: 100%;
+} 
+
 /* Personalidade */
 #personality-title h1 {
     text-align: center;
