Exibindo novo visual para Trabalhos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -60,23 +60,65 @@
   
         <!--Ultimos Trabalhos-->
         <div class="col-sm-12 text-center">
-            <h1>Últimos Trabalhos</h1>
+            <h1>Trabalhos</h1>
         </div>
         <div class="container">
-            <div id="works" class="row">
+            <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
-                <a href="https://biciflow.com"><img class="img-size" src="assets/images//biciflow.png" alt="Biciflow"></a>
+                    <a href="https://caririolindense.org.br/"><img class="img-size" src="assets/images/cariri.png" alt="Cariri"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
-                <a href="https://navegue.app"><img class="img-size" src="assets/images//navegue.png" alt="Navegue"></a>
+                    <p align="justify">Desde 2020 tenho a oportunidade de fazer a landing page da TCM 
+                        Cariri Olidense. Conhecida como a mais antiga troça de Olinda, foi fundada em 15 
+                        de fevereiro de 2021. Trabalhei tanto no design, utilizando as melhores práticas 
+                        de Design Thinking, tanto no Desenvolvimento Web Front-end com Angular 8. 
+                    </p>
                 </div>
             </div>
-            <div id="works" class="row">
+            <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
-                <a href="https://mapeamento40.mctic.gov.br/"><img class="img-size" src="assets/images//mapa40.png" alt="Mapa40"></a>
+                    <a href="https://biciflow.com"><img class="img-size" src="assets/images/biciflow.png" alt="Biciflow"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
-                <a href="https://www.instagram.com/p/BylWlLNHygv/?utm_source=ig_web_copy_link"><img class="img-size" src="assets/images//chopeira40.jpg" alt="Chopeira 4.0"></a>
+                    <p align="justify">Desde 2016 participo do Biciflow. Ele é um aplicativo que ajuda 
+                        ciclistas e potenciais ciclistas a encontrar companhia para seus percursos 
+                        diários. Nesse tempo, já trabalhei com Desenvolvimento Android utilizando Java,
+                        Scrum, Design Thinking, estratégias de mercado em busca de oceano azul,
+                        Desenvolvimento Web Front-end com Angular 8.</p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="https://navegue.app"><img class="img-size" src="assets/images/navegue.png" alt="Navegue"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Desde 2018 faço parte da Navegue. Ela é uma startup que promove 
+                        deslocamentos rápidos e de baixo impacto, conectando passageiros, cargas e 
+                        embarcações a partir de aplicativos. Nesse tempo trabalhei com Desenvolvimento
+                        Android com Java para os três primeiros MVPs, Back-end as a Service com o 
+                        Firebase e Desenvolvimento Web Front-end com Angular 8.</p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="https://mapeamento40.mctic.gov.br/"><img class="img-size" src="assets/images/mapa40.png" alt="Mapa40"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">O projeto Mapeamento 4.0, uma iniciativa do Ministério da Ciência, 
+                        Tecnologia, Inovação e Telecomunicações (MCTIC) e do Serviço Nacional de 
+                        Aprendizagem Nacional (SENAI-DN), tem por objetivo identificar iniciativas 
+                        existentes no país à luz do Plano CT&I para Manufatura Avançada no Brasil – 
+                        ProFuturo, lançado pelo MCTIC em dezembro de 2017.</p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="https://www.instagram.com/p/BylWlLNHygv/?utm_source=ig_web_copy_link"><img class="img-size" src="assets/images/chopeira40.jpg" alt="Chopeira 4.0"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">A chopeira 4.0, desenvolvida pelo ISI-TICS para a EKAUT, foi case de sucesso na 
+                        categoria inovação, no 8º Congresso Brasileiro de Inovação da Indústria, maior e 
+                        mais consistente debate sobre inovação da América Latina.</p>
                 </div>
             </div>
   
@@ -84,7 +126,6 @@
                 <a href="assets/files/saude.pdf">Saúde 10 anos no futuro</a><br>
                 <a href="assets/files/esports.pdf">ESports</a><br>
                 <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg">Polyedron</a><br>
-                <a href="https://play.google.com/store/apps/details?id=br.com.ufpe.busrate">BusRate</a><br>
                 <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html">Acidentes de Trânsito no Recife</a><br>
                 <a href="http://www.co2energia.com.br/">CO2Energia</a><br>
             </div>
