--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -77,6 +77,20 @@
             </div>
             <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
+                    <a href="https://www.behance.net/gallery/108819853/Armarico"><img class="img-size" src="assets/images/armarico.png" alt="Armarico"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Em 2020, durante a disciplina de Design Centrado no Usuário (DCU) da 
+                        pós-graduação, apresentamos em equipe como projeto final o Amarico. Trata-se de um
+                         esquema de guarda-roupa compartilhado para reduzir compra de roupas e diminuição 
+                         de estoque de roupas não-usadas. Tivemos a oportunidade de trilhar os caminhos 
+                         com processos e abordagens de design a partir de um problema proposto até uma 
+                         solução.
+                    </p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
                     <a href="https://biciflow.com"><img class="img-size" src="assets/images/biciflow.png" alt="Biciflow"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
