Melhorando descrição para Cariri

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,9 +69,10 @@
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
                     <p align="justify">Desde 2020 tenho a oportunidade de fazer a landing page da TCM 
-                        Cariri Olindense. Conhecida como a mais antiga troça de Olinda, foi fundada em 15 
-                        de fevereiro de 1921. Trabalhei tanto no design, utilizando as melhores práticas 
-                        de Design Thinking, tanto no Desenvolvimento Web Front-end com Angular 8. 
+                        Cariri Olindense. Conhecida como a mais antiga troça de frevo de Olinda, foi 
+                        fundada em 15 de fevereiro de 1921. Trabalhei tanto no design, utilizando as 
+                        melhores abordagens de Design Thinking, tanto no Desenvolvimento Web Front-end 
+                        com Angular 8. 
                     </p>
                 </div>
             </div>
