--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -77,6 +77,19 @@
             </div>
             <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
+                    <a href="https://github.com/luisdelgado/hack-ccr"><img class="img-size" src="assets/images/realiza.png" alt="Realiza"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Ficamos no Top 30 do HACKATHON CCR 2021. No evento, propomos o 
+                        Realiza! Uma plataforma que tem como público-alvo os jovens de periferia do 
+                        Nordeste que criam produções culturais audiovisuais e têm dificuldade em acessar 
+                        financiamento por editais de incentivo (onde o dinheiro mais circula). No projeto eu participei como Desenvolvedor Web 
+                        Front-end utilizando Angular 8. 
+                    </p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
                     <a href="https://www.behance.net/gallery/108819853/Armarico"><img class="img-size" src="assets/images/armarico.png" alt="Armarico"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
