Melhorando descrição do REALIZA!

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
                     <p align="justify">Ficamos no Top 30 do HACKATHON CCR 2021. No evento, propomos o 
-                        Realiza! Uma plataforma que tem como público-alvo os jovens de periferia do 
+                        REALIZA! Uma plataforma que tem como público-alvo os jovens de periferia do 
                         Nordeste que criam produções culturais audiovisuais e têm dificuldade em acessar 
                         financiamento por editais de incentivo (onde o dinheiro mais circula). No projeto eu participei como Desenvolvedor Web 
                         Front-end utilizando Angular 8. 
