Melhorando visualização de Saúde 10 Anos no Futuro

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -58,11 +58,24 @@
         </div>
         <hr>
   
-        <!--Ultimos Trabalhos-->
+        <!-- Trabalhos -->
         <div class="col-sm-12 text-center">
             <h1>Trabalhos</h1>
         </div>
         <div class="container">
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude10AnosFuturo.png" alt="Saúde"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Saúde 10 Anos no Futuro: Onde estamos e onde podemos ir, foi um
+                        trabalho de Foresight Thinking desenvolvido na disciplina Pensando 
+                        Empreendimentos no Futuro em 2018. Coletar sinais, reunir tendências, fazer 
+                        previsões, criar possibilidades de cenários, construir personas e narrativas 
+                        futuras estão entre as atividades que realizei nesse trabalho.  
+                    </p>
+                </div>
+            </div>
             <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://caririolindense.org.br/"><img class="img-size" src="assets/images/cariri.png" alt="Cariri"></a>
@@ -151,7 +164,6 @@
             </div>
   
             <div class="col-sm-12 text-center">
-                <a href="assets/files/saude.pdf">Saúde 10 anos no futuro</a><br>
                 <a href="assets/files/esports.pdf">ESports</a><br>
                 <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg">Polyedron</a><br>
                 <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html">Acidentes de Trânsito no Recife</a><br>
