Melhorando visualização de Acidentes de Trânsito no Recife

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,11 +68,25 @@
                     <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude10AnosFuturo.png" alt="Saúde"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
-                    <p align="justify">Saúde 10 Anos no Futuro: Onde estamos e onde podemos ir, foi um
+                    <p align="justify">"Saúde 10 Anos no Futuro: Onde estamos e onde podemos ir" foi um
                         trabalho de Foresight Thinking desenvolvido na disciplina Pensando 
                         Empreendimentos no Futuro em 2018. Coletar sinais, reunir tendências, fazer 
                         previsões, criar possibilidades de cenários, construir personas e narrativas 
                         futuras estão entre as atividades que realizei nesse trabalho.  
+                    </p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html"><img class="img-size" src="assets/images/acidentesTransitoRecife.png" alt="Trânsito"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Acidentes de Trânsito no Recife foi o projeto para a
+                        disciplina de Visualização de Dados em 2017. Colocamos em 
+                        prática conceitos vistos em sala de aula. Para isso 
+                        utilizamos bases de dados abertas disponíveis pela prefeitura do Recife dos 
+                        acidentes de trânsito de recife nos anos de 2015 e 2016. Utilizando a biblioteca
+                        D3 em JavaScript fiz o histograma.
                     </p>
                 </div>
             </div>
@@ -166,7 +180,6 @@
             <div class="col-sm-12 text-center">
                 <a href="assets/files/esports.pdf">ESports</a><br>
                 <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg">Polyedron</a><br>
-                <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html">Acidentes de Trânsito no Recife</a><br>
                 <a href="http://www.co2energia.com.br/">CO2Energia</a><br>
             </div>
         </div>
