Melhorando visualização de Polyedron

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -118,6 +118,18 @@
             </div>
             <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
+                    <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg"><img class="img-size" src="assets/images/polyedron.png" alt="Polyedron"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">Polyedron é um jogo desenvolvido para a disciplina de 
+                        Implementação de Jogos 2D em 2016. Apesar de inacabado, está disponível para 
+                        Android assim como seu Documento de Game Design (GDD). Para desenvolvimento foi 
+                        utilizado Unity com C#.
+                    </p>
+                </div>
+            </div>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4">
                     <a href="https://www.behance.net/gallery/108819853/Armarico"><img class="img-size" src="assets/images/armarico.png" alt="Armarico"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
@@ -176,11 +188,14 @@
                         mais consistente debate sobre inovação da América Latina.</p>
                 </div>
             </div>
-  
-            <div class="col-sm-12 text-center">
-                <a href="assets/files/esports.pdf">ESports</a><br>
-                <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg">Polyedron</a><br>
-                <a href="http://www.co2energia.com.br/">CO2Energia</a><br>
+            <div class="row works">
+                <div class="offset-xl-1 col-xl-4 text-center">
+                    <h1>Outros</h1>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4 text-center">
+                    <a href="assets/files/esports.pdf">ESports</a><br>
+                    <a href="http://www.co2energia.com.br/">CO2Energia</a><br>
+                </div>
             </div>
         </div>
 
