Informando como acessar Trabalhos

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -61,6 +61,7 @@
         <!-- Trabalhos -->
         <div class="col-sm-12 text-center">
             <h1>Trabalhos</h1>
+            <p><i>Clique na imagem para visualizar um trabalho</i></p>
         </div>
         <div class="container">
             <div class="row works">
