Melhorando visualização de Saúde 10 Anos no Futuro

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row works">
                 <div class="offset-xl-1 col-xl-4">
-                    <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude10AnosFuturo.png" alt="Saúde"></a>
+                    <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude.png" alt="Saúde"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
                     <p align="justify">"Saúde 10 Anos no Futuro: Onde estamos e onde podemos ir" foi um
