--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -208,9 +208,9 @@
             <div class="row">
                 <div class="col text-center">
                     <img src="assets/images/personality.svg"><br>
-                    <br><a href="https://www.16personalities.com/br/personalidade-esfj">Personalidade: Cônsul</a><br>
-                    <a href="https://www.16personalities.com/articles/roles-sentinels">Papel: Sentinela</a><br>
-                    <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Líder com Pessoas</a>
+                    <br><a href="https://www.16personalities.com/br/personalidade-infj">Personalidade: Advogado</a><br>
+                    <a href="https://www.16personalities.com/articles/roles-diplomats">Papel: Diplomata</a><br>
+                    <a href="https://www.16personalities.com/articles/strategies-constant-improvement">Estratégia: Melhoria Constante</a>
                 </div>
                 <div class="col-sm-8 large-characteristics text-center">
                     <div class="row">
