--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -207,7 +207,7 @@
         <div id="personality" class="container">
             <div class="row">
                 <div class="col text-center">
-                    <img src="assets/images/personality.svg"><br>
+                    <img src="assets/images/personality-advocate.png"><br>
                     <br><a href="https://www.16personalities.com/br/personalidade-infj">Personalidade: Advogado</a><br>
                     <a href="https://www.16personalities.com/articles/roles-diplomats">Papel: Diplomata</a><br>
                     <a href="https://www.16personalities.com/articles/strategies-constant-improvement">Estratégia: Melhoria Constante</a>
@@ -219,7 +219,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 56%" aria-valuenow="56" aria-valuemin="0" aria-valuemax="100">56%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
                             </div>
                         </div>
                         <div class="col-sm-4 text-center">
@@ -232,7 +232,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 46%" aria-valuenow="46" aria-valuemin="0" aria-valuemax="100">46%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100">62%</div>
                             </div>
                         </div>
                         <div class="col-sm-4 text-center">
@@ -241,59 +241,59 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 text-center">
-                            <p>Pensamento</p>
+                            <p>Pensante</p>
                         </div>
                         <div class="col-sm-4">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 36%" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100">36%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 43%" aria-valuenow="43" aria-valuemin="0" aria-valuemax="100">43%</div>
                             </div>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <p>Emoção</p>
+                            <p>Sentimento</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4 text-center">
-                            <p>Organizado</p>
+                            <p>Julgador</p>
                         </div>
                         <div class="col-sm-4">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">72%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">69%</div>
                             </div>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <p>Flexível</p>
+                            <p>Explorador</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4 text-center">
-                            <p>Confiante</p>
+                            <p>Assertivo</p>
                         </div>
                         <div class="col-sm-4">
                             <div class="progress">  
-                                <div class="progress-bar" role="progressbar" style="width: 51%" aria-valuenow="51" aria-valuemin="0" aria-valuemax="100">51%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 44%" aria-valuenow="44" aria-valuemin="0" aria-valuemax="100">44%</div>
                             </div>
                         </div>
                         <div class="col-sm-4 text-center">
-                            <p>Consciente</p>
+                            <p>Cauteloso</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-8 mobile-characteristics text-center">
                     <div>
-                        <p><span class="max-percent">Extrovertido  56</span> | 44 Introvertido</p>
+                        <p>Extrovertido  40 | <span class="max-percent">60 Introvertido</span></p>
                     </div>
                     <div>
-                        <p>Intuitivo 46 | <span class="max-percent">54 Observador</span></p>
+                        <p><span class="max-percent">Intuitivo 62</span> | 38 Observador</p>
                     </div>
                     <div>
-                        <p>Pensamento 36 | <span class="max-percent">64 Emoção</span></p>
+                        <p>Pensante 43 | <span class="max-percent">57 Sentimento</span></p>
                     </div>
                     <div>
-                        <p><span class="max-percent">Organizado 72</span> | 28 Flexível</p>
+                        <p><span class="max-percent">Julgador 69</span> | 31 Explorador</p>
                     </div>
                     <div>
-                        <p><span class="max-percent">Confiante 51</span> | 49 Consciente</p>
+                        <p>Assertivo 44 | <span class="max-percent">56 Cauteloso</span></p>
                     </div>
                 </div>
             </div>
