Melhorando nomenclatura de classes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -64,7 +64,7 @@
             <p><i>Clique na imagem para visualizar um trabalho</i></p>
         </div>
         <div class="container">
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude.png" alt="Saúde"></a>
                 </div>
@@ -77,7 +77,20 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
+                <div class="offset-xl-1 col-xl-4">
+                    <a href="assets/files/saude.pdf"><img class="img-size" src="assets/images/saude.png" alt="Saúde"></a>
+                </div>
+                <div class="offset-0 offset-xl-2 col-xl-4">
+                    <p align="justify">"Saúde 10 Anos no Futuro: Onde estamos e onde podemos ir" foi um
+                        trabalho de Foresight Thinking desenvolvido na disciplina Pensando 
+                        Empreendimentos no Futuro em 2018. Coletar sinais, reunir tendências, fazer 
+                        previsões, criar possibilidades de cenários, construir personas e narrativas 
+                        futuras estão entre as atividades que realizei nesse trabalho.  
+                    </p>
+                </div>
+            </div>
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html"><img class="img-size" src="assets/images/acidentesTransitoRecife.png" alt="Trânsito"></a>
                 </div>
@@ -91,7 +104,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://caririolindense.org.br/"><img class="img-size" src="assets/images/cariri.png" alt="Cariri"></a>
                 </div>
@@ -104,7 +117,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://github.com/luisdelgado/hack-ccr"><img class="img-size" src="assets/images/realiza.png" alt="Realiza"></a>
                 </div>
@@ -117,7 +130,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg"><img class="img-size" src="assets/images/polyedron.png" alt="Polyedron"></a>
                 </div>
@@ -129,7 +142,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://www.behance.net/gallery/108819853/Armarico"><img class="img-size" src="assets/images/armarico.png" alt="Armarico"></a>
                 </div>
@@ -143,7 +156,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://biciflow.com"><img class="img-size" src="assets/images/biciflow.png" alt="Biciflow"></a>
                 </div>
@@ -155,7 +168,7 @@
                         Desenvolvimento Web Front-end com Angular 8.</p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://navegue.app"><img class="img-size" src="assets/images/navegue.png" alt="Navegue"></a>
                 </div>
@@ -167,7 +180,7 @@
                         Firebase e Desenvolvimento Web Front-end com Angular 8.</p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://mapeamento40.mctic.gov.br/"><img class="img-size" src="assets/images/mapa40.png" alt="Mapa40"></a>
                 </div>
@@ -179,7 +192,7 @@
                         ProFuturo, lançado pelo MCTIC em dezembro de 2017.</p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
                     <a href="https://www.instagram.com/p/BylWlLNHygv/?utm_source=ig_web_copy_link"><img class="img-size" src="assets/images/chopeira40.jpg" alt="Chopeira 4.0"></a>
                 </div>
@@ -189,7 +202,7 @@
                         mais consistente debate sobre inovação da América Latina.</p>
                 </div>
             </div>
-            <div class="row works">
+            <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4 text-center">
                     <h1>Outros</h1>
                 </div>
