Atualizando link do LinkedIn

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,7 +24,7 @@
                         <div id="media" class="col-xl-12 text-center">
                             <br><a href="https://www.facebook.com/luis.delgado.5209000"><img src="assets/images//imgresFace.png"></a>
                             <a href="https://www.instagram.com/luisdelgado7/"><img src="assets/images//instagram.png"></a>
-                            <a href="https://www.linkedin.com/in/luís-henrique-delgado-santos-29ab68a7"><img src="assets/images//imgresIn.png"></a>
+                            <a href="https://www.linkedin.com/in/luisdelgado-29ab68a7/"><img src="assets/images//imgresIn.png"></a>
                             <a href="https://www.twitter.com/carequinha10"><img src="assets/images//twitter.png"></a>
                             <a href="https://github.com/luisdelgado"><img src="assets/images//GitHub-Mark.png"></a>
                             <a href="https://letterboxd.com/luisdelgado/"><img src="assets/images//letterboxd.jpg"></a>
