Adicionando título da Personalidade

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -205,10 +205,12 @@
             <h1>Personalidade</h1>
         </div>
         <div id="personality" class="container">
-            <div class="row">
+            <div class="row div--twoColumns">
                 <div class="col text-center">
                     <img src="assets/images/personality-advocate.png"><br>
-                    <br><a href="https://www.16personalities.com/br/personalidade-infj">Personalidade: Advogado</a><br>
+                    <br>
+                    <h2>INFJ</h2>
+                    <a href="https://www.16personalities.com/br/personalidade-infj">Personalidade: Advogado</a><br>
                     <a href="https://www.16personalities.com/articles/roles-diplomats">Papel: Diplomata</a><br>
                     <a href="https://www.16personalities.com/articles/strategies-constant-improvement">Estratégia: Melhoria Constante</a>
                 </div>
