Atualizando site do Biciflow

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -145,7 +145,7 @@
             </div>
             <div class="row container__works">
                 <div class="offset-xl-1 col-xl-4">
-                    <a href="https://biciflow.com"><img class="img-size" src="assets/images/biciflow.png" alt="Biciflow"></a>
+                    <a href="https://biciflow.app"><img class="img-size" src="assets/images/biciflow.png" alt="Biciflow"></a>
                 </div>
                 <div class="offset-0 offset-xl-2 col-xl-4">
                     <p align="justify">Desde 2016 participo do Biciflow. Ele é um aplicativo que ajuda 
